index.html Galery section has beed added

--- a/index.html
+++ b/index.html
@@ -234,20 +234,78 @@
     </p>
   </div>
 
-
-
 </div>
 </div>
 </section>
 
 <section class="galery">
   <div class="container">
-
+    <div class="galery__top">
+<h2>Галерея</h2>
+<div class="galery__filter-btn">
+  <div class="galery__btn">ВСЕ</div>
+  <div class="galery__btn">ТУРИСТЫ</div>
+  <div class="galery__btn">ПРИРОДА</div>
+  <div class="galery__btn">ПРОФИ</div>
+</div>
   </div>
-  <h2 class="galery__title">Галерея</h2>
-  <div class="galery__inner">
 
+
+<div class="galery__content">
+  <div class="galery__content-left">
+    <div class="galery__item">
+      <img src="images/galery/1.jpg" alt="galery images"></div>
+<div class="galery__content-inner">
+   <div class="galery__item">
+      <img src="images/galery/2.jpg" alt="galery images"></div>
+    <div class="galery__item">
+      <img src="images/galery/3.jpg" alt="galery images"></div>
+    </div>
+</div>
+   
+<div class="galery__content-right">
+    <div class="galery__content-inner">
+ <div class="galery__item">
+      <img src="images/galery/4.jpg" alt="galery images"></div>
+ <div class="galery__item">
+      <img src="images/galery/5.jpg" alt="galery images"></div>
+    </div>
+    <div class="galery__item">
+      <img src="images/galery/6.jpg" alt="galery images"></div>
+</div>
+</div>
+  <div class="galery__content-btn">
+    <a class="galery__more" href="">ПОКАЗАТЬ ЕЩЁ</a>
   </div>
+
+  <blockquote class="galery__add">
+        «Если сомневаешься – иди катайся.»
+    <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
+  </blockquote>
+  <div class="galery__video">
+    <a class="galery__video-link" href="#">
+      <img src="images/galery/play.svg" alt="play icon">
+    </a>
+  </div>
+  <div class="galery__numbers">
+    <h5 class="galery_numbers-item">
+      450
+      <span>туристов</span>
+    </h5>
+     <h5 class="galery__numbers-item">
+      2500
+      <span>часов катания</span>
+    </h5>
+     <h5 class="galery__numbers-item">
+      10
+      <span>проф. тренеров</span>
+    </h5>
+     <h5 class="galery__numbers-item">
+      365
+      <span>дней в году</span>
+    </h5>
+  </div>
+    </div>
 </section>
 
 
