player has been added

--- a/index.html
+++ b/index.html
@@ -278,13 +278,14 @@
     <a class="galery__more" href="">ПОКАЗАТЬ ЕЩЁ</a>
   </div>
 
-  <blockquote class="galery__add">
+  <div class="galery__add">
         «Если сомневаешься – иди катайся.»
     <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
-  </blockquote>
+    </div>
+
   <div class="galery__video">
     <a class="galery__video-link" href="#">
-      <img src="images/galery/play.svg" alt="play icon">
+      <img src="images/galery/galery__video.jpg" alt="play icon">
     </a>
   </div>
   <div class="galery__numbers">
