--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 </section>
 
 <section class="galery">
-  <div class="container">
-    <div class="galery__top">
+<div class="container">
+     <div class="galery__top">
 <h2>Галерея</h2>
 <div class="galery__filter-btn">
   <div class="galery__btn">ВСЕ</div>
@@ -249,7 +249,6 @@
   <div class="galery__btn">ПРОФИ</div>
 </div>
   </div>
-
 
 <div class="galery__content">
   <div class="galery__content-left">
@@ -261,8 +260,7 @@
     <div class="galery__item">
       <img src="images/galery/3.jpg" alt="galery images"></div>
     </div>
-</div>
-   
+</div> 
 <div class="galery__content-right">
     <div class="galery__content-inner">
  <div class="galery__item">
@@ -277,18 +275,28 @@
   <div class="galery__content-btn">
     <a class="galery__more" href="">ПОКАЗАТЬ ЕЩЁ</a>
   </div>
+</div>
 
-  <div class="galery__add">
-        «Если сомневаешься – иди катайся.»
-    <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
-    </div>
+
+  <section class="galery__add">
+    <h3 class="author-quote">«Если сомневаешься – иди катайся.»</h3>
+   <!--      «Если сомневаешься – иди катайся.» -->
+   <div class="galery-author__content">
+     <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
+   </div>
+ <!--   <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span> -->
+    </section>
+
 
   <div class="galery__video">
+    <div class="container"> 
     <a class="galery__video-link" href="#">
       <img src="images/galery/galery__video.jpg" alt="play icon">
     </a>
   </div>
-  <div class="galery__numbers">
+    </div>
+
+    <div class="galery__numbers">
     <h5 class="galery_numbers-item">
       450
       <span>туристов</span>
@@ -306,8 +314,10 @@
       <span>дней в году</span>
     </h5>
   </div>
-    </div>
+    
 </section>
+
+
 
 
 
