two more sections base without css styles have been added to project

--- a/index.html
+++ b/index.html
@@ -276,17 +276,18 @@
     <a class="galery__more" href="">ПОКАЗАТЬ ЕЩЁ</a>
   </div>
 </div>
-
+</section>
 
   <section class="galery__add">
-    <h3 class="author-quote">«Если сомневаешься – иди катайся.»</h3>
-   <!--      «Если сомневаешься – иди катайся.» -->
-   <div class="galery-author__content">
+    <div class="galery-author__content">
+        <blockquote class="author-quote">«Если сомневаешься – иди катайся.»</blockquote>
      <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
-   </div>
- <!--   <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span> -->
-    </section>
+    </div>
 
+  <!--   <blockquote class="author-quote">«Если сомневаешься – иди катайся.»</blockquote>
+     <span class="galery__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span> -->
+ 
+    </section>
 
   <div class="galery__video">
     <div class="container"> 
@@ -297,27 +298,58 @@
     </div>
 
     <div class="galery__numbers">
-    <h5 class="galery_numbers-item">
+    <div class="galery__numbers-item">
       450
       <span>туристов</span>
-    </h5>
-     <h5 class="galery__numbers-item">
+    </div>
+     <div class="galery__numbers-item">
       2500
       <span>часов катания</span>
-    </h5>
-     <h5 class="galery__numbers-item">
+     </div>
+     <div class="galery__numbers-item">
       10
       <span>проф. тренеров</span>
-    </h5>
-     <h5 class="galery__numbers-item">
+    </div>
+     <div class="galery__numbers-item">
       365
-      <span>дней в году</span>
-    </h5>
+    <span>дней в году</span>
+    </div>
   </div>
-    
+
+
+<section class="Blog">
+    <h2 class="blog__title">Блог</h2>
+    <div class="container">
+<div class="blog-picture">
+  <img class="picture" src="images/blog-picture.png" alt="">
+    </div>
+    </div>
 </section>
 
-
+<section class="team">
+  <div class="container">
+<h2>
+  Наша команда 
+</h2>
+<div class="our__team-content">
+  <div class="our__team-item">
+    <img src="images/Mike.png" alt="">
+    <h4>Mike</h4>
+    <span>Главный инстуктор</span>
+  </div>
+    <div class="our__team-item">
+    <img src="images/Mary.png" alt="">
+    <h4>Mary</h4>
+    <span>Инстуктор</span>
+  </div>
+    <div class="our__team-item">
+    <img src="images/Olga.png" alt="">
+    <h4>Ольга</h4>
+    <span>Инстуктор</span>
+  </div>
+</div>
+  </div>
+</section>
 
 
 
